cluster/apps/uptime-kuma/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma
  namespace: default
  annotations:
    gethomepage.dev/description: Uptime Kuma - Self-hosted monitoring
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: sh-uptime-kuma
    gethomepage.dev/name: Uptime Kuma
    gethomepage.dev/pod-selector: app.kubernetes.io/name=uptime-kuma
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway
  hostnames:
    - uptime.internal.gustend.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: uptime-kuma
          port: 3001
          weight: 1
