cluster/apps/uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  labels:
    app.kubernetes.io/name: uptime-kuma
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/description: Uptime Kuma - Self-hosted monitoring
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: sh-uptime-kuma
    gethomepage.dev/name: Uptime Kuma
    gethomepage.dev/pod-selector: app.kubernetes.io/name=uptime-kuma
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - uptime.internal.gustend.net
      secretName: uptime-internal-gustend-net-cert
  rules:
    - host: uptime.internal.gustend.net
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 3001
